@@ -2,7 +2,6 @@ package thelm.jaopca.client.colors;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.joml.Vector4f;
 
@@ -85,8 +84,7 @@ public class ColorHandler {
 
 	public static Vector4f weightedAverageColor(Iterable<Item> items, double gammaValue) {
 		List<Vector4f> colors = Streams.stream(items).map(ItemStack::new).
-				map(stack->weightedAverageColor(stack, gammaValue)).
-				collect(Collectors.toList());
+				map(stack->weightedAverageColor(stack, gammaValue)).toList();
 		return weightedAverageColor(colors, gammaValue);
 	}
 
