@@ -6,7 +6,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -28,6 +28,7 @@ import net.minecraftforge.forgespi.language.ModFileScanData.AnnotationData;
 import net.minecraftforge.resource.ResourcePackLoader;
 import thelm.jaopca.api.resources.IPackSupplier;
 import thelm.jaopca.api.resources.JAOPCAPackSupplier;
+import thelm.jaopca.utils.MiscHelper;
 
 public class DataCollector {
 
@@ -57,12 +58,12 @@ public class DataCollector {
 		forEach(resourcePacks::add);
 		List<AnnotationData> annotationData = ModList.get().getAllScanData().stream().
 				flatMap(data->data.getAnnotations().stream()).
-				filter(data->JAOPCA_PACK_SUPPLIER.equals(data.annotationType())).
-				collect(Collectors.toList());
+				filter(data->JAOPCA_PACK_SUPPLIER.equals(data.annotationType())).toList();
+		Predicate<String> modVersionNotLoaded = MiscHelper.INSTANCE.modVersionNotLoaded(LOGGER);
 		for(AnnotationData aData : annotationData) {
 			List<String> deps = (List<String>)aData.annotationData().get("modDependencies");
 			String className = aData.clazz().getClassName();
-			if(deps != null && deps.stream().filter(Predicates.notNull()).anyMatch(DataCollector::isModVersionNotLoaded)) {
+			if(deps != null && deps.stream().filter(Predicates.notNull()).anyMatch(modVersionNotLoaded)) {
 				LOGGER.info("Pack supplier {} has missing mod dependencies, skipping", className);
 				continue;
 			}
